
- Added win_sparkle_set_app_details() for setting app metadata from code,
  as an alternative to their extraction from resources.
- It is no longer necessary to call win_sparkle_set_appcast_url(), the
  feed can be specified in FeedURL resource with type set to APPCAST.

Version 0.2
-----------

- Display error if update info couldn't be retrieved while manually checking
  for updates.
- WinSparkle window is now resizable only when showing release notes.
- Bypass cache and proxies in manual checks.


Version 0.1.1
-------------

- Fixed Sparkle namespace in appcast parser; it now looks for the correct
  `http://www.andymatuschak.org/xml-namespaces/sparkle` value. Appcasts
  using the incorrect `http://www.andymatuschak.org/xml-namespaces`
  URI must be updated.


Version 0.1
-----------

- Initial release.